--- a/home.css
+++ b/home.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     padding: 0;
@@ -12,7 +13,7 @@ body{
   top: 0;
   width: 100%;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
 }
 .header{
   height: 700px;
@@ -829,222 +830,6 @@ ul, ol {
   text-transform: capitalize;
   color: #757575;
 }
-/* .testimonials {
-  background-color: #f4f7fa;
-  position: relative;
-  padding-bottom: 180px;
-}
-.testimonials-title{
-    text-align: center;
-    margin-bottom: 80px;
-    padding: 0 300px;
-    position: relative;
-}
-.tns-outer {
-  padding: 0!important;
-}
-.testimonials .tns-nav {
-  text-align: center;
-  position: absolute;
-  bottom: 90px;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 100%;
-  left: 50%;
-  z-index: 9;
-  margin: 0;
-}
-.testimonials .tns-nav button.tns-nav-active {
-  width: 25px;
-  background-color: #3080e3;
-}
-.testimonials .tns-nav button {
-  height: 6px;
-  width: 14px;
-  background-color: #d0cccc;
-  border-radius: 5px;
-  display: inline-block;
-  border: none;
-  margin: 0 5px;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-}
-.tns-visually-hidden {
-  position: absolute;
-  left: -10000em;
-}
-.tns-ovh {
-  overflow: hidden;
-} */
-
-/* .testimonials {
-  background-color: #F4F7FA;
-  position: relative;
-  padding-bottom: 180px;
-}
-.testimonials-title{
-  text-align: center;
-  margin-bottom: 80px;
-  padding: 0 300px;
-  position: relative;
-  z-index: 0;
-}
-.testimonials-title h3 {
-  font-size: 15px;
-  font-weight: 500;
-  display: inline-block;
-  margin-bottom: 20px;
-  color: #3080e3;
-  border: 2px solid #3080e3;
-  border-radius: 30px;
-  padding: 8px 30px;
-  text-transform: capitalize;
-}
-.testimonials-title h2 {
-  font-size: 34px;
-  margin-bottom: 25px;
-  line-height: 42px;
-  text-transform: capitalize;
-  position: relative;
-  font-weight: 700;
-}
-.testimonials-title p {
-  font-size: 15px;
-  line-height: 26px;
-  color: #757575;
-}
-.testimonials .testimonial-slider {
-  margin: 0;
-}
-
-.testimonials .single-testimonial {
-  position: relative;
-  background-color: #fff;
-  transition: all 0.4s ease;
-  border-radius: 6px;
-  overflow: hidden;
-  padding: 70px 50px;
-}
-
-
-.testimonials .owl-dots .owl-dot span {
-  display: inline-block;
-  height: 6px;
-  width: 14px;
-  background-color: #d0cccc;
-  border-radius: 5px;
-  border: none;
-  margin: 0px 5px;
-  transition: all 0.4s ease;
-}
-
-.testimonials .owl-dots button.owl-dot.active span {
-  width: 25px;
-  background-color: #3080E3;
-}
-
-.testimonials .single-testimonial .shape1 {
-  position: absolute;
-  left: 40px;
-  top: 0;
-}
-
-.testimonials .single-testimonial .shape2 {
-  position: absolute;
-  right: -20px;
-  bottom: -20px;
-}
-
-.testimonials .single-testimonial .inner-content {
-  position: relative;
-  z-index: 0;
-}
-
-.testimonials .single-testimonial .qote-icon {
-  position: absolute;
-  font-size: 70px;
-  top: 0;
-  color: #3333331a;
-  z-index: -1;
-  opacity: 0.2;
-  right: 0;
-}
-
-.testimonials .single-testimonial .text h4 {
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 28px;
-  color: #151515;
-}
-
-.testimonials .single-testimonial .author {
-  position: relative;
-  padding-left: 70px;
-  margin-top: 40px;
-}
-
-.testimonials .single-testimonial .author img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-.testimonials .single-testimonial .author h4 {
-  font-size: 17px;
-  font-weight: 600;
-  color: #151515;
-}
-
-.testimonials .single-testimonial .author h4 span {
-  display: block;
-  color: #3080E3;
-  margin-top: 4px;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.testimonials .tns-nav {
-  text-align: center;
-  position: absolute;
-  bottom: 90px;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 100%;
-  left: 50%;
-  z-index: 9;
-  margin: 0;
-}
-.tns-outer {
-  padding: 0!important;
-}
-.single-testimonial{
-  width: 50%;
-}
-.testimonials .tns-nav button {
-  height: 6px;
-  width: 14px;
-  background-color: #d0cccc;
-  border-radius: 5px;
-  display: inline-block;
-  border: none;
-  margin: 0 5px;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-}
-.testimonials .tns-nav button.tns-nav-active {
-  width: 25px;
-  background-color: #3080e3;
-}
-.tns-visually-hidden {
-  position: absolute;
-  left: -10000em;
-}
-.tns-ovh {
-  overflow: hidden;
-} */
 
 .testimonials {
   background-color: #F4F7FA;
@@ -1055,6 +840,36 @@ ul, ol {
 .testimonials .testimonial-slider {
   margin: 0;
 }
+.testimonials-title h3{
+    font-size: 15px;
+    font-weight: 500;
+    display: inline-block;
+    margin-bottom: 20px;
+    color: #3080e3;
+    border: 2px solid #3080e3;
+    border-radius: 30px;
+    padding: 8px 30px;
+    text-transform: capitalize;
+    margin-left: 545px;
+}
+.testimonials-title h2 {
+  font-size: 34px;
+  margin-bottom: 25px;
+  line-height: 42px;
+  text-transform: capitalize;
+  position: relative;
+  font-weight: 700;
+  margin-left: 500px;
+}
+.testimonials-title p {
+  font-size: 15px;
+  /* line-height: 16px; */
+  text-indent: -30%;
+  color: #757575;
+  margin-left: 552px;
+  margin-bottom: 100px;
+}
+
 
 .testimonials .single-testimonial {
   position: relative;
@@ -1145,7 +960,7 @@ ul, ol {
   font-weight: 400;
 }
 
-/* for mobile devices */
+
 @media (max-width: 768px) {
   .testimonials {
       padding-bottom: 120px;
@@ -1164,3 +979,352 @@ ul, ol {
       bottom: 55px;
   }
 }
+.blog-section {
+  background-color: #fff;
+}
+
+.blog-section .section-title {
+  margin-bottom: 50px;
+}
+
+.single-blog {
+  margin-top: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px #00000013;
+  border-radius: 18px;
+  padding: 12px;
+}
+
+.single-blog .blog-img {
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.single-blog .blog-img a {
+  width: 100%;
+}
+
+.single-blog .blog-img img {
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+.single-blog:hover .blog-img img {
+  transform: scale(1.1);
+}
+
+.single-blog .blog-content {
+  padding: 30px 20px 18px 20px;
+}
+
+.single-blog .blog-content .category {
+  font-size: 14px;
+  color: #3080E3;
+  display: inline-block;
+  font-weight: 500;
+}
+
+.single-blog .blog-content h4 {
+  display: block;
+  margin-top: 10px;
+  line-height: 28px;
+}
+
+.single-blog .blog-content h4 a {
+  font-size: 18px;
+  color: #151515;
+  display: inline-block;
+}
+
+.single-blog .blog-content h4 a:hover {
+  color: #3080E3;
+}
+
+.single-blog .blog-content p {
+  display: block;
+  margin-top: 20px;
+}
+
+.single-blog .blog-content .more-btn {
+  font-weight: 500;
+  display: inline-block;
+  margin-top: 20px;
+  color: #888;
+}
+
+.single-blog .blog-content .more-btn:hover {
+  color: #3080E3;
+  letter-spacing: 1px;
+}
+
+.single-blog .blog-content .more-btn i {
+  position: relative;
+  font-size: 20px;
+  display: inline-block;
+  margin-left: 5px;
+  top: 3px;
+}
+.blog-section-title h3 {
+  font-size: 15px;
+  font-weight: 500;
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #3080e3;
+  border: 2px solid #3080e3;
+  border-radius: 30px;
+  padding: 8px 30px;
+  text-transform: capitalize;
+  margin-left: 580px;
+}
+.blog-section-title h2 {
+  font-size: 34px;
+  margin-bottom: 25px;
+  line-height: 42px;
+  text-transform: capitalize;
+  position: relative;
+  font-weight: 700;
+  margin-left: 500px;
+}
+.blog-section-title p {
+  font-size: 15px;
+  /* line-height: 16px; */
+  text-indent: -30%;
+  color: #757575;
+  margin-left: 552px;
+  margin-bottom: 100px;
+}
+
+/* for mobile devices */
+@media (max-width: 768px) {
+  .blog-section .section-title {
+      margin-bottom: 20px;
+  }
+}
+
+.call-action {
+  background-color: #fff;
+}
+
+.call-action .inner-content {
+  position: relative;
+  padding: 50px;
+  border-radius: 10px;
+  background-color: #3080E3;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.call-action .inner-content .bg-shape {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.call-action .text h2 {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  color: #fff;
+}
+
+.call-action .text h2 span {
+  display: block;
+  color: #3080E3;
+}
+
+.call-action .button {
+  float: right;
+}
+
+.call-action .button .btn {
+  background-color: #fff;
+  color: #151515;
+}
+
+.call-action .button .btn:hover {
+  background-color: #fd723b;
+  color: #fff;
+}
+
+.call-action .button .btn.btn-alt:hover {
+  background-color: #151515 !important;
+}
+
+/* for mobile devices */
+@media (max-width: 768px) {
+  .call-action .inner-content {
+      padding: 30px;
+      text-align: center;
+  }
+
+  .call-action .text h2 {
+      font-size: 22px;
+      line-height: 32px;
+  }
+
+  .call-action .btn-mobile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+  }
+}
+
+.footer {
+  background-color: #fff;
+  position: relative;
+}
+
+.footer .single-footer.f-about {
+  padding-right: 30px;
+}
+
+.footer .single-footer.f-about .logo img {
+  width: 110px;
+}
+
+.footer .single-footer.f-about p {
+  color: #727272;
+  margin-top: 20px;
+}
+
+.footer .single-footer.f-about .copyright-text {
+  color: #727272;
+  margin-top: 40px;
+}
+
+.footer .single-footer.f-about .copyright-text span {
+  display: block;
+}
+
+.footer .single-footer.f-about .copyright-text a {
+  color: #3080E3;
+}
+
+.footer .single-footer.f-about .copyright-text a:hover {
+  color: #fd723b;
+}
+
+.footer .single-footer.f-link li {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.footer .single-footer.f-link li:last-child {
+  margin: 0;
+}
+
+.footer .single-footer.f-link li a {
+  font-size: 15px;
+  font-weight: 400;
+  color: #727272;
+}
+
+.footer .single-footer.f-link li a:hover {
+  color: #3080E3;
+}
+
+.footer .single-footer h3 {
+  display: block;
+  color: #151515;
+  font-size: 17px;
+  font-weight: 600;
+  margin-bottom: 35px;
+}
+
+.footer .newsletter-form {
+  position: relative;
+  margin-top: 30px;
+}
+
+.footer .newsletter-form input {
+  width: 100%;
+  height: 55px;
+  padding-right: 65px;
+  padding-left: 18px;
+  border-radius: 8px;
+  border: 1px solid #eee;
+  transition: all 0.4s ease;
+}
+
+.footer .newsletter-form input:hover {
+  border-color: #3080e3;
+}
+
+.footer .newsletter-form input:focus {
+  border-color: #3080e3;
+}
+
+
+.footer .newsletter-form .button {
+  position: absolute;
+  right: 7px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.footer .newsletter-form .button .sub-btn {
+  width: 42px;
+  height: 42px;
+  background-color: #3080e3;
+  color: #fff;
+  border-radius: 6px;
+  text-align: center;
+  line-height: 42px;
+  border: none;
+  font-size: 17px;
+  transition: all 0.4s ease;
+}
+
+.footer .newsletter-form .button .sub-btn:hover {
+  color: #fff;
+  background-color: #fd723b;
+}
+
+@media (max-width: 768px) {
+  .footer {
+      padding-top: 30px;
+      padding-bottom: 60px;
+  }
+
+  .footer .single-footer {
+      margin-top: 40px;
+      text-align: center;
+  }
+
+  .footer .single-footer.f-about {
+      padding: 0;
+  }
+
+  .footer .single-footer.f-about .copyright-text {
+      margin-top: 20px;
+  }
+
+  .footer .single-footer h3 {
+      margin-bottom: 25px;
+  }
+}
+
+/* scroll top */
+.scroll-top {
+  width: 45px;
+  height: 45px;
+  font-size: 14px;
+  line-height: 45px;
+  border-radius: 5px;
+  background: #3080e3;
+  color: #fff !important;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
+  cursor: pointer;
+  transition: all .3s ease-out;
+}
+
+.scroll-top:hover {
+  box-shadow: 0 1rem 3rem rgba(35, 38, 45, 0.15) !important;
+  transform: translate3d(0, -5px, 0);
+  background-color: #fd723b;
+}
+
